--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>io.goorm</groupId>
 	<artifactId>ddic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+<!--	<packaging>war</packaging>-->
 	<name>ddic</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
