--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/ddic
+    url: jdbc:h2:file:C:/data/ddic;MODE=MYSQL
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+  h2:
+    console:
+      enabled: true
 
   jpa:
     hibernate:
@@ -11,7 +15,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
   logging:
     level:
       org.hibernate.SQL: debug
